# lifx-device

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: Lifx.h  LifxConstants.h  LifxDevice.h  LifxMessage.h  LifxMessageHandler.h
src/: Lifx.cpp  LifxDevice.cpp  LifxMessageHandler.cpp
tests/: LifxMessageHandlerTests.cpp  tests.cpp
